:sparkles: Rust で WebSocket サーバーを実装した

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>CLIP STUDIO REMOTE</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div id="container">
@@ -12,6 +12,6 @@
       <div id="pen"><span>ペン</span></div>
       <div id="eraser"><span>消しゴム</span></div>
     </div>
-    <script src="./bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
